--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cros": "^1.0.1",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.0.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
