--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vinicius Barros and Maria Eduarda Furtado",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
-    "cros": "^1.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.0.0",
