--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cros": "^1.0.1",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^2.0.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
